--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <div class="guess">
+        <div class="guess--test" id="guess-test"></div>
         <h1 class="h--guess">Начнем?</h1>
         <input type="number" class="input--guess" />
         <button class="btn--guess">тык</button>
