trying to make ui better

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
+      <div class="result" id="result--main"></div>
       <div class="guess">
-        <div class="guess--test" id="guess-test"></div>
         <h1 class="h--guess">Начнем?</h1>
         <input type="number" class="input--guess" />
         <button class="btn--guess">тык</button>
