--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <main>
-      <div class="result" id="result--main"></div>
+      <div class="result">
+        <div class="result--actual" id="result--main"></div>
+      </div>
       <div class="guess">
         <h1 class="h--guess">Начнем?</h1>
         <input type="number" class="input--guess" />
