added rules button, rules modal, rules raw text

--- a/index.html
+++ b/index.html
@@ -15,9 +15,29 @@
       <div class="guess">
         <h1 class="h--guess">Начнем?</h1>
         <input type="number" class="input--guess" />
-        <button class="btn--guess">тык</button>
+        <button class="btn btn--guess">тык</button>
+        <div>
+          <button class="btn btn--rules">Правила</button>
+          <button class="btn btn--newGame">Новая Игра</button>
+        </div>
       </div>
     </main>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <h2>ПРАВИЛА</h2>
+      <p>
+        Загадано 4-значиное число с неповторяющимися цифрами. Нужно угадать это
+        число, путем ввода 4-х значных чисел.
+      </p>
+      <p>
+        Если цифра из введенного числа есть в загаданном числе - это корова 🐄
+      </p>
+      <p>
+        Если цифра из введенного числаесть в загаданном и совпадает по
+        местоположению - это бык 🐂
+      </p>
+    </div>
+    <div class="overlay hidden"></div>
   </body>
   <script src="script.js"></script>
 </html>
