--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <button class="close-modal">&times;</button>
       <h2>ПРАВИЛА</h2>
       <p>
-        Загадано 4-значиное число с неповторяющимися цифрами. Нужно угадать это
-        число, путем ввода 4-х значных чисел.
+        Загадано 4-значное число с неповторяющимися цифрами. Нужно угадать это
+        число, путем ввода 4-значных чисел.
       </p>
       <p>
         Если цифра из введенного числа есть в загаданном числе - это корова 🐄
       </p>
       <p>
-        Если цифра из введенного числаесть в загаданном и совпадает по
+        Если цифра из введенного числа есть в загаданном и совпадает по
         местоположению - это бык 🐂
       </p>
     </div>
