added Attempts & HighScore

--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
       </div>
       <div class="guess">
         <h1 class="h--guess">Начнем?</h1>
+        <div class="counter--guess">
+          <p class="attempt--guess">
+            🥁 Попытка:
+            <span class="attempt--guessValue">0</span>
+          </p>
+          <p class="highscore--guess">
+            👑 Рекорд:
+            <span class="highscore--guessValue">0</span>
+          </p>
+        </div>
         <input type="number" class="input--guess" />
         <button class="btn btn--guess">тык</button>
-        <div>
-          <button class="btn btn--rules">Правила</button>
-          <button class="btn btn--newGame">Новая Игра</button>
+        <div class="footer">
+          <div class="footer--btn">
+            <button class="btn btn--rules">Правила</button>
+            <button class="btn btn--newGame">Новая Игра</button>
+          </div>
         </div>
       </div>
     </main>
