make rules a bit better

--- a/index.html
+++ b/index.html
@@ -36,18 +36,23 @@
     </main>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <h2>ПРАВИЛА</h2>
-      <p>
-        Загадано 4-значное число с неповторяющимися цифрами. Нужно угадать это
-        число, путем ввода 4-значных чисел.
+      <h2 class="rules">ПРАВИЛА</h2>
+      <p class="rules--1p">
+        ➡️ Загадано 4-значное число с неповторяющимися цифрами. Нужно угадать
+        это число, путем ввода 4-значных чисел.
       </p>
-      <p>
-        Если цифра из введенного числа есть в загаданном числе - это корова 🐄
+      <p class="rules--2p">
+        ➡️ Если цифра из введенного числа есть в загаданном числе - это корова
+        🐄
       </p>
-      <p>
-        Если цифра из введенного числа есть в загаданном и совпадает по
+      <p class="rules--3p">
+        ➡️ Если цифра из введенного числа есть в загаданном числе и совпадает по
         местоположению - это бык 🐂
       </p>
+      <a
+        href="https://ru.wikipedia.org/wiki/%D0%91%D1%8B%D0%BA%D0%B8_%D0%B8_%D0%BA%D0%BE%D1%80%D0%BE%D0%B2%D1%8B"
+        >Подробнее можно прочесть на википедии</a
+      >
     </div>
     <div class="overlay hidden"></div>
   </body>
